added piza menu

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   <script src="src/language/language.js"></script>
   <header>
     <!-- NAVBAR -->
-   <script src="src/nav.js"></script>
+   <script src="src/nav.js">
+  
+   </script>
 
   </header>
   <main>
