removed taiwan font due to size and loading issue

--- a/src/navHelp.html
+++ b/src/navHelp.html
@@ -19,14 +19,17 @@
                </script> 
                <span class="sr-only">(current)</span></a>
            </li>
-             <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="food.html" id="navbarDropdownMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                 <li class="nav-item dropdown">
+               <a class="nav-link dropdown-toggle" href="pizza.html" id="navbarDropdownMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                  Menu
                </a>
                <div class="dropdown-menu text-center text-lg-left" aria-labelledby="navbarDropdown">
-                 <a class="dropdown-item" href="food.html">Food</a>
-                 <a class="dropdown-item" href="desserts.html">Desserts</a>
-                 <a class="dropdown-item" href="drinks.html">Drinks</a>
+                 <a class="dropdown-item" href="pizza.html" id="pizzaMenuLabel">Pizza<a>
+                 <script>
+                 console.log('test')</script>
+                 </a>
+                 <a class="dropdown-item" id="coomingSoon" >Coming Soon</a>
+
                </div>
                 
               </li> 
